--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 
 .screen {
     width: 224px;
-    background-color: azure;
+background-color: rgba(255,255,255,0.2);
     border: none;
     border-radius: 2px;
     font-size: 40px;
