--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ button:active {
     width: 100%;
     background-color:  rgba(213, 43, 42,0.1);
     /*border-radius: 50px;*/
-    font-family: "Arial Rounded MT Bold";
+    font-family: "Open Sans";
     font-size: 25px;
     color: #0f111a;
     /*font-weight: bold;*/
